# summary_test

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/api/routes/: job_routes.py
app/audio/: chunking.py  preprocessing.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/jobs/: __init__.py  job_models.py  job_repository.py  job_service.py
app/storage/: local_storage.py  minio_storage.py  storage_interface.py
app/stt/: whisper_engine.py
app/summarize/: llm_summarizer.py  summarizer_interface.py
tests/unit/: test_job_models.py  test_summarizer.py
