[project]
name = "summary-test"
version = "0.1.0"
description = "Long-Audio Summary Service - Transcribes audio using Whisper and generates study-friendly summaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Settings and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async file operations
    "aiofiles>=23.2.1",
    
    # Logging
    "structlog>=24.1.0",
    
    # ML/AI - Whisper
    "faster-whisper>=1.0.0",
    "torch>=2.1.0",
    
    # LLM Summarization
    "huggingface-hub>=0.20.0",
    
    # Audio processing (optional, ffmpeg handles most)
    # Note: ffmpeg must be installed on the system
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow-running",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

